Fix figure alignment

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -108,6 +108,10 @@
   max-height: 384px;
 }
 
+.figure {
+    vertical-align: top;
+}
+
 .figure-caption {
     /* display: table-caption; */
     caption-side: bottom;
